# Servidores-py-go-rust-c

./: README.md
api go Redis/: api.go  go.mod  prueba.txt
python/: index.html
python3-flask/: index.py
python3-flask/templates/: index.html
rust/: Cargo.toml
rust/src/: main.rs
rust/src/static/: index.html
serverGo/: servergo.go
serverGo/static/: bars.html  hola.html  index.html
serverGo/static/libs/: graf.js  morris.min.js
